<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFon"
    android:orientation="vertical"
    tools:context="com.example.colonizers.Count">
    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorButton"
        android:text="@string/lvls"
        android:textColor="#FF000000"
        android:textSize="72sp" />
    <Button
        android:id="@+id/primarySchool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/caima2"
        android:text="@string/primarySchool"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fourthForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/caima2"
        android:text="@string/fourthForm"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ninthForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/caima2"
        android:text="@string/ninthForm"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/eleventhForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/caima2"
        android:text="@string/eleventhForm"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:background="@drawable/caima2"
        android:text="@string/student"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>
