<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorFon"
    tools:context="com.example.colonizers.InformationG">

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorButton"
        android:text="@string/information"
        android:textColor="#FF000000"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="left"
        android:layout_marginTop="18dp"
        android:text="@string/text2"
        android:textColor="#FF000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="@drawable/caima2"
        android:text="@string/play"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>

